--- a/lab2/question1.html
+++ b/lab2/question1.html
@@ -7,15 +7,15 @@
 </head>
 <body> 
     <h1> My First Webpage </h1>
-    <ul type ="square"
-    ></ul>
+    <ul type ="square">
 
-    <li> <a href="https://www.google.com" target="-blank">google</a></li>
+    <li> <a href="https://www.google.com" target="_blank">google</a></li>
     <hr>
-    <li> <a href ="https://www.youtube.com" target="-blank">youtube</a></li>
+    <li> <a href ="https://www.youtube.com" target="_blank">youtube</a></li>
     <hr>
-    <li> <a href ="https://www.amazon.com" target="-blank".>amazon </a></li>
+    <li> <a href ="https://www.amazon.com" target="_blank">amazon </a></li>
 
-    
+    </ul>
 </body>
+
 </html>
